--- a/Chat Online/index.html
+++ b/Chat Online/index.html
@@ -16,6 +16,33 @@
 
 <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-auth.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyDxMKs_BswCmzUvN40eZryQkMhIFekcXlE",
+    authDomain: "ci56-37986.firebaseapp.com",
+    projectId: "ci56-37986",
+    storageBucket: "ci56-37986.appspot.com",
+    messagingSenderId: "276074235107",
+    appId: "1:276074235107:web:0976faa7e598757f2f71d6"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js" 
+    integrity="sha512-nOQuvD9nKirvxDdvQ9OMqe2dgapbPB7vYAMrzJihw5m+aNcf0dX53m6YxM4LgA9u8e9eg9QX+/+mPu8kCNpV2A==" 
+    crossorigin="anonymous">
+</script>
 </head>
 <body>
     <div id="app" class="d-flex p-3 justify-content-center">
