--- a/Chat Online/index.html
+++ b/Chat Online/index.html
@@ -43,16 +43,19 @@
     integrity="sha512-nOQuvD9nKirvxDdvQ9OMqe2dgapbPB7vYAMrzJihw5m+aNcf0dX53m6YxM4LgA9u8e9eg9QX+/+mPu8kCNpV2A==" 
     crossorigin="anonymous">
 </script>
+
+<script src="//unpkg.com/navigo@6"></script>
 </head>
+
 <body>
-    <div id="app" class="d-flex p-3 justify-content-center">
-        <div class="p-2 bg-info">
-            <login-form></login-form>
-        </div>
-        <div class="p-2 bg-warning">
-            <register-form></register-form>
-        </div>
+    <div id="app">
+        <message-list messages='[
+            {"content": "alo alo", "owned": false},
+            {"content": "What", "owned": true},
+            {"content": "Làm tí không ?", "owned": false}
+        ]'></message-list>
     </div>
+    <send-message-form></send-message-form>
     <script src = "./JS/app.js" type="module"></script>
 </body>
 </html>
